# scrape-sporty

./: England.csv  France.csv  Germany.csv  Italy.csv  Spain.csv  pyproject.toml
scrape_sporty/: config.py  f_engineer.py  main.py
